--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="textoRegistrarse">Registrarse</string>
     <string name="textoPerfil">Perfil</string>
     <string name="textoMensajes">Mensajes</string>
-    
+
     <!--Botones-->
     <string name="textoGestionarPermisos">Gestionar Permisos</string>
     <string name="textoTareasAdministrativas">Tareas Administrativas</string>
@@ -23,16 +23,18 @@
     <string name="textoAsignarGuardias">Asignar Guardias</string>
     <string name="textoElaborarInformes">Elaborar Informes</string>
 
-    <!--Hints-->
+    <!--Textos-->
     <string name="textoDNI">DNI</string>
     <string name="textoNombre">Nombre</string>
     <string name="textoCorreo">Correo</string>
+    <string name="textoTipoDeProfesor">Tipo de Profesor</string>
     <string name="textoTitulacion">Titulación</string>
     <string name="textoContrasena">Contraseña</string>
     <string name="textoConfirmarContrasena">Confirmar Contraseña</string>
 
     <!--Texto de errores-->
     <string name="textoFalloInsertarDatosInicioSesion">El correo o la contraseña son incorrectos</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
