--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
 
     <!--Texto de errores-->
     <string name="textoFalloInsertarDatosInicioSesion">El correo o la contraseña son incorrectos</string>
+    <string name="errorTextosVacíos">Debes rellenar todos los textos</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
